# SG-1-Memory-Pooling

./: .gitignore  AUTHORS.md  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  DONORS.md  Doxyfile  FOR_RESEARCHERS.md  INSTALL.md  ISSUE_TEMPLATE.md  LICENSE  MAINTAINERS  Makefile  NEWS.md  README.md  SPECIFICATION.md  SPECIFICATION_COMPACT.md  THANKS  TODO.md  VERSION_CURRENT  VERSION_RELEASED  carbon.pc  carbon.pc.in  cmake_install.cmake
benches/: CMakeLists.txt  Makefile  cmake_install.cmake
benches/mem/pools/: main.c
benches/mem/pools/r-scripts/: .RData  .Rhistory  compare-magic-vs-trivial.r  magic-memory-pool-performance.r  show-overhead-mempool-vs-clib.r
examples/: CMakeLists.txt  Makefile  cmake_install.cmake  examples-error  examples-error.c
sent results/: ATDB-MemPool SG-1 Task 3.txt
src/coding/: huffman.c
src/core/alloc/: alloc.c  trace.c
src/core/async/: parallel.c  spin.c
src/core/carbon/: archive.c  archive_converter.c  archive_int.c  archive_io.c  archive_iter.c  archive_query.c  archive_sid_cache.c  archive_strid_iter.c  archive_visitor.c
src/core/encode/: encode_async.c  encode_sync.c
src/core/mem/: block.c  file.c  pool.c
src/core/mem/pools/: magic.c  none.c
src/core/oid/: oid.c
src/core/pack/: coding_huffman.c  pack.c  pack_none.c
src/core/ptrs/: data_ptr.c  tagged_ptr.c
src/core/strhash/: strhash_mem.c
src/include/coding/: coding_huffman.h
src/include/core/: carbon.h
src/include/core/alloc/: alloc.h  trace.h
src/include/core/async/: parallel.h  spin.h
src/include/core/carbon/: archive.h  archive_converter.h  archive_int.h  archive_io.h  archive_iter.h  archive_query.h  archive_sid_cache.h  archive_strid_iter.h  archive_string_pred.h  archive_visitor.h
src/include/core/encode/: encode_async.h  encode_sync.h
src/include/core/mem/: block.h  file.h  pool.h
src/include/core/mem/pools/: magic.h  none.h
src/include/core/oid/: oid.h
src/include/core/pack/: huffman.h  pack.h  pack_none.h
src/include/core/ptrs/: data_ptr.h  tagged_ptr.h
src/include/core/strhash/: strhash_mem.h
src/include/core/string-pred/: string_pred_contains.h  string_pred_equals.h
src/include/hash/: add.h  bern.h  bern2.h  elf.h  fnv.h  hash.h  jenkins.h  oat.h  rot.h  sax.h  xor.h
src/include/json/: columndoc.h  doc.h  encoded_doc.h  json.h
src/include/shared/: common.h  error.h  types.h
src/include/shell/: opt.h
src/include/std/: bitmap.h  bloom.h  hash_set.h  hash_table.h  histogram.h  sort.h  vec.h
src/include/stdx/: slicelist.h  strdic.h  strhash.h
src/include/utils/: convert.h  time.h
src/json/: columndoc.c  doc.c  encoded_doc.c  json.c
src/shared/: error.c
src/shell/: opt.c
src/std/: bitmap.c  bloom.c  hash_set.c  hash_table.c  histogram.c  sort.c  vec.c
src/stdx/: slicelist.c
src/utils/: convert.c  time.c
tests/: CMakeLists.txt  Makefile  cmake_install.cmake  test-archive-converter.cpp  test-archive-iter.cpp  test-archive-ops.cpp  test-data_ptr.cpp  test-fix-map.cpp  test-histogram.cpp  test-mempools.cpp  test-oid.cpp  test-tagged_ptr.cpp
tools/carbon/: CMakeLists.txt  Makefile  cli.c  cli.h  cmake_install.cmake  main.c  modules.c  modules.h
tools/carbon/ops/: ops-count-values.c  ops-count-values.h  ops-get-citations.c  ops-get-citations.h  ops-show-keys.c  ops-show-keys.h  ops-show-values.c  ops-show-values.h
